# mono

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .renovaterc.json5  AGENTS.md  BUILD.bazel  Brewfile  CODEOWNERS  CONTAINER_STRUCTURE_TEST_PROGRESS.md  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  buildx.bzl  ci.bazelrc  deps.bzl  environment-linux.yml  flake.nix  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  requirements.txt  requirements_darwin.txt  requirements_darwin_arm64.txt  requirements_darwin_lock.txt  requirements_gpu.txt  requirements_gpu_lock.txt  requirements_linux.txt  requirements_linux_lock.txt  requirements_linux_x86_64.txt  requirements_linux_x86_64_cuda.txt  requirements_lock.txt  result
agentgateway-discovery/: BUILD.bazel  README.md  go.mod  main.go
airflow/: BUILD.bazel  Dockerfile  README.md  bps.py  tsw.py  versions.yaml
burst/: BUILD.bazel  controller.go  go.mod  go.sum  main.go
constraints/: BUILD.bazel
cronprint/: .dockerignore  BUILD.bazel  Dockerfile  README.md  config.py  cupsd.conf  go.mod  go.sum  health.py  main.go  main.py  printer.go  printer.py  pyproject.toml  requirements.txt  requirements_lock.txt  scheduler.py  tests.yaml
cronprint/cronprint/: app.py  scheduler.py
ears/: README.md  main.py  pyproject.toml
ears/resnet/: model.py
gt7/: Cargo.toml
gt7/pulsar-bridge/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
gt7/pulsar-bridge/src/: config.rs  flags.rs  heartbeat.rs  lib.rs  main.rs  packet.rs  pulsar_handler.rs
gt7/pulsar-bridge/tests/: integration_tests.rs
gt7/src/: cypher.rs  errors.rs  flags.rs  main.rs  packet.rs  pulsar_handler.rs
gt7/telemetry/: BUILD.bazel  Cargo.toml  README.md  container-structure-test.yaml  docker-bake.hcl  tests.yaml  transition.bzl
gt7/telemetry-server/: BUILD.bazel  Cargo.toml  Dockerfile  README.md  docker-compose.yml  websockets.md
gt7/telemetry-server/src/: config.rs  cypher.rs  heartbeat.rs  hello.rs  http_server.rs  main.rs  packet.rs  pulsar_handler.rs  telemetry_loop.rs
gt7/telemetry-server/tests/: integration_tests.rs
gt7/telemetry/src/: cypher.rs  heartbeat.rs  kafka_handler.rs  lib.rs  main.rs  packet.rs  telemetry_loop.rs
jaxes/: BUILD.bazel  Dockerfile  README.md  main.py  pyproject.toml  requirements-darwin.txt  requirements-linux.txt  requirements.txt  requirements_darwin.txt  requirements_darwin_lock.txt  requirements_gpu.txt  requirements_gpu_lock.txt  requirements_lock.txt  simple_jax.py
lake/: BUILD.bazel  Dockerfile  README.md  go.mod  go.sum  pyproject.toml  requirements_lock.txt  service.bzl
lake-mcp/: BUILD.bazel  Dockerfile  pyproject.toml  requirements_lock.txt
lake-mcp/src/lake_mcp/: agent.py  mcp_server.py
lake-mcp/tests/: test_domain.py  test_ingest.py  test_promote.py  test_state.py
lake-mcp/tests/fixtures/: rba_f1.csv  (+2 more)
lake/mcp/: README.md  pyproject.toml  requirements_lock.txt
lake/scripts/: register_tables.py
lake/tests/: test_domain.py  test_ingest.py  test_promote.py  test_state.py
line/: BUILD.bazel  README.md  capture  go.mod  go.sum  service.bzl
line/analytics/: BUILD.bazel  pyproject.toml  requirements_lock.txt
line/data/: embed.go  tracks.json
line/migrations/: 001_initial.sql  002_annotations.sql  003_reference_laps.sql  004_journals.sql  005_push_subscriptions.sql
line/proto/: line.proto
line/test/: e2e.sh  e2e_test.go  helpers_test.go
line/web/: BUILD.bazel  index.html  package.json  vite.config.ts
macro/: BUILD.bazel  Dockerfile  pyproject.toml  requirements_lock.txt
macro/tests/: conftest.py  test_domain.py  test_ingest.py  test_promote.py  test_state.py
meet/: .gitignore  BUILD.bazel  README.md  go.mod  main.go
meet/audio/: capture.h  wav.go
meet/client/: annotate.go  client.go
meet/config/: config.go
nodepool-autoscaler/: BUILD.bazel  go.mod
nodepool-autoscaler/cmd/: main.go
nodepool-autoscaler/deploy/: deployment.yaml  namespace.yaml  rbac.yaml
pii-adapter/: BUILD.bazel  config.go  go.mod  handlers.go  handlers_test.go  main.go  placeholders.go  presidio.go  presidio_test.go  scrub.go  scrub_test.go
repair/: BUILD.bazel  README.md  go.mod  go.sum  repair.go  repair_test.go
scrib/: .gitignore  AGENTS.md  BUILD.bazel  Dockerfile.server  README.md  go.mod  go.sum  main.go
scrib-audio/: BUILD.bazel  README.md  pyproject.toml
scrib-audio/tests/: regenerate_align_golden.py  test_align.py  test_align_golden.py  test_diarize_stitch.py
scrib/audio/: capture.h  capture.m  recorder.go  recorder_test.go  wav.go  wav_test.go
scrib/client/: annotate.go  annotate_test.go  client.go  client_test.go  outbox.go
scrib/config/: config.go  config_test.go
scrib/diar/: BUILD.bazel  Package.swift
scrib/ml/: BUILD.bazel  README.md  pyproject.toml  requirements_lock.txt
scrib/server/: audio.go  eventbus.go  openapi.json  process.go  server.go  speakers.go  sse.go
scrib/store/: store.go
scrib/sync/: sync.go
scrib/tui/: tui.go
tools/: BUILD.bazel  build-linux.sh  get-version.sh  upload-assets.sh  workspace_status.sh
tools/containers/: build.sh
tools/controller-gen/: BUILD.bazel  controller-gen.bzl  toolchain.bzl
tools/helm-oci/: BUILD.bazel  helm-oci.bzl  toolchain.bzl
tools/lint/: BUILD.bazel  linters.bzl
tools/protoc/: BUILD.bazel  protoc_wrapper.sh
tools/remote-toolchains/: BUILD.bazel
tools/toolchains/: BUILD.bazel
tools/whl_modifications/: BUILD.bazel  nvidia_nccl_cu12.BUILD  triton.BUILD
torches/: BUILD.bazel  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements-darwin.txt  requirements-linux.txt  requirements.txt  requirements_darwin_lock.txt  requirements_gpu_lock.txt  requirements_lock.txt  torch_utils.py
vgc/: .gitignore  BUILD.bazel  pipeline.py  pyproject.toml  requirements_lock.txt
vgc/analysis/: __init__.py
vgc/calc/: BUILD.bazel  __init__.py  build.mjs  calc_server.mjs  package-lock.json  package.json
vgc/publish/: export.py
vgc/reports/: helpers.py  meta_report.py
vgc/schema/: __init__.py  iceberg.py  storage.py  tables.py
vgc/tests/: test_schema.py
(+549 files in other folders)
