load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_multirun//:defs.bzl", "multirun")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages(name = "node_modules")

js_library(
    name = "eslintrc",
    srcs = ["eslint.config.mjs"],
    deps = [
        ":node_modules/@eslint/js",
        ":node_modules/typescript-eslint",
    ],
)

PROJECTS = ["//jaxes", "//torches"]
PLATFORMS = ["darwin", "linux"]

multirun(
    name = "requirements",
    commands = [
        "{}:requirements_{}".format(project, platform)
        for platform in PLATFORMS
        for project in PROJECTS
    ],
)

