module(
    name = "mono",
    version = "0.1.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "aspect_rules_js", version = "3.0.3")
bazel_dep(name = "aspect_rules_lint", version = "2.3.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_python", version = "1.9.0")

# go
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.9")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//cronprint:go.mod")
go_deps.module(
    path = "github.com/go-chi/chi/v5",
    sum = "h1:KOIHODQj58PmL80G2Eak4WdvUzjSJSm0vG72crDCqb8=",
    version = "v5.2.1",
)
go_deps.module(
    path = "github.com/jackc/pgx/v5",
    sum = "h1:9wKznZrhWa2QiHL+NjTSPP6yjl3451BX3imWDnokYlg=",
    version = "v5.7.4",
)
go_deps.module(
    path = "github.com/jackc/puddle/v2",
    sum = "h1:PR8nw+E/1w0GLuRFSmiioY6UooMp6KJv0/61nB7icHo=",
    version = "v2.2.2",
)
go_deps.module(
    path = "github.com/jackc/pgpassfile",
    sum = "h1:/6Hmqy13Ss2zCq62VdNG8tM1wchn8zjSGOBJ6icpsIM=",
    version = "v1.0.0",
)
go_deps.module(
    path = "github.com/jackc/pgservicefile",
    sum = "h1:iCEnooe7UlwOQYpKFhBabPMi4aNAfoODPEFNiAnClxo=",
    version = "v0.0.0-20240606120523-5a60cdf6a761",
)
go_deps.module(
    path = "golang.org/x/crypto",
    sum = "h1:euUpcYgM8WcP71gNpTqQCn6rC2t6ULUPiOzfWaXVVfc=",
    version = "v0.32.0",
)
go_deps.module(
    path = "golang.org/x/sync",
    sum = "h1:3NQrjDixjgGwUOCaF8w2+VYHv0Ve/vGYSbdkTa98gmQ=",
    version = "v0.10.0",
)
go_deps.module(
    path = "golang.org/x/text",
    sum = "h1:zyQAAkrwaneQ066sspRyJaG9VNi/YJ1NfzcGB3hZ/qo=",
    version = "v0.21.0",
)
go_deps.module(
    path = "github.com/redis/go-redis/v9",
    sum = "h1:pMkxYPkEbMPwRdenAzUNyFNrDgHx9U+DrBabWNfSRQs=",
    version = "v9.18.0",
)
go_deps.module(
    path = "github.com/cespare/xxhash/v2",
    sum = "h1:UL815xU9SqsFlibzuggzjXhog7bL6oX9BbNZnL2UFvs=",
    version = "v2.3.0",
)
go_deps.module(
    path = "github.com/dgryski/go-rendezvous",
    sum = "h1:lO4WD4F/rVNCu3HqELle0jiPLLBs70cWOduZpkS1E78=",
    version = "v0.0.0-20200823014737-9f7001d12a5f",
)
go_deps.module(
    path = "github.com/jonas-p/go-shp",
    sum = "h1:LY81nN67DBCz6VNFn2kS64CjmnDo9IP8rmSkTvhO9jE=",
    version = "v0.1.1",
)
go_deps.module(
    path = "github.com/pressly/goose/v3",
    sum = "h1:bZmxRco2uy5uu5Ng1MMVEfYsFlrMJI+e/VMXHQ3C4LY=",
    version = "v3.24.1",
)
go_deps.module(
    path = "github.com/mfridman/interpolate",
    sum = "h1:pnuTK7MQIxxFz1Gr+rjSIx9u7qVjf5VOoM/u6BbAxPY=",
    version = "v0.0.2",
)
go_deps.module(
    path = "github.com/sethvargo/go-retry",
    sum = "h1:EEt31A35QhrcRZtrYFDTBg91cqZVnFL2navjDrah2SE=",
    version = "v0.3.0",
)
go_deps.module(
    path = "go.uber.org/multierr",
    sum = "h1:blXXJkSxSSfBVBlC76pxqeO+LN3aDfLQo+309xJstO0=",
    version = "v1.11.0",
)
go_deps.module(
    path = "go.uber.org/atomic",
    sum = "h1:ZvwS0R+56ePWxUNi+Atn9dWONBPp/AUETXlHW0DxSjE=",
    version = "v1.11.0",
)
go_deps.module(
    path = "github.com/aws/aws-sdk-go-v2",
    sum = "h1:dj5kopbwUsVUVFgO4Fi5BIT3t4WyqIDjGKCangnV/yY=",
    version = "v1.41.5",
)
go_deps.module(
    path = "github.com/aws/aws-sdk-go-v2/credentials",
    sum = "h1:mA59E3fokBvyEGHKFdnpNNrvaR351cqiHgRg+JzOSRI=",
    version = "v1.19.13",
)
go_deps.module(
    path = "github.com/aws/aws-sdk-go-v2/service/s3",
    sum = "h1:HwxWTbTrIHm5qY+CAEur0s/figc3qwvLWsNkF4RPToo=",
    version = "v1.97.3",
)
go_deps.module(
    path = "github.com/google/uuid",
    sum = "h1:NIvaJDMOsjHA8n1jAhLSgzrAzy1Hgr+hNrb57e+94F0=",
    version = "v1.6.0",
)
go_deps.module(
    path = "github.com/parquet-go/parquet-go",
    sum = "h1:xXlPtFVR51jpSVzf+cgHnNIcb7Xet+iuvkbe0HIm90Y=",
    version = "v0.29.0",
)
go_deps.module(
    path = "github.com/parquet-go/bitpack",
    sum = "h1:AUqzlKzPPXf2bCdjfj4sTeacrUwsT7NlcYDMUQxPcQA=",
    version = "v1.0.0",
)
go_deps.module(
    path = "github.com/parquet-go/jsonlite",
    sum = "h1:87QNdi56wOfsE5bdgas0vRzHPxfJgzrXGml1zZdd7VU=",
    version = "v1.0.0",
)
go_deps.module(
    path = "github.com/twpayne/go-geom",
    sum = "h1:iLE+Opv0Ihm/ABIcvQFGIiFBXd76oBIar9drAwHFhR4=",
    version = "v1.6.1",
)
go_deps.module(
    path = "github.com/prometheus/client_golang",
    sum = "h1:Je96obch5RDVy3FDMndoUsjAhG5Edi49h0RJWRi/o0o=",
    version = "v1.23.2",
)
go_deps.module(
    path = "github.com/prometheus/common",
    sum = "h1:h5E0h5/Y8niHc5DlaLlWLArTQI7tMrsfQjHV+d9ZoGs=",
    version = "v0.66.1",
)
go_deps.module(
    path = "github.com/prometheus/client_model",
    sum = "h1:oBsgwpGs7iVziMvrGhE53c/GrLUsZdHnqNwqPLxwZyk=",
    version = "v0.6.2",
)
go_deps.module(
    path = "github.com/prometheus/procfs",
    sum = "h1:hZ15bTNuirocR6u0JZ6BAHHmwS1p8B4P6MRqxtzMyRg=",
    version = "v0.16.1",
)
go_deps.module(
    path = "github.com/twmb/franz-go",
    sum = "h1:P4MGSXJjjAPP3NRGPCks/Lrq+j+twWMVl1qYCVgNmWY=",
    version = "v1.20.7",
)
go_deps.module(
    path = "github.com/twmb/franz-go/pkg/kmsg",
    sum = "h1:CbatD7ers1KzDNgJqPbKOq0Bz/WLBdsTH75wgzeVaPc=",
    version = "v1.12.0",
)
go_deps.module(
    path = "github.com/mmcdole/gofeed",
    sum = "h1:5yn+HeqlcvjMeAI4gu6T+crm7d0anY85+M+v6fIFNG4=",
    version = "v1.3.0",
)
go_deps.module(
    path = "github.com/mmcdole/goxpp",
    sum = "h1:Zr92CAlFhy2gL+V1F+EyIuzbQNbSgP4xhTODZtrXUtk=",
    version = "v1.1.1-0.20240225020742-a0c311522b23",
)
go_deps.module(
    path = "github.com/aws/smithy-go",
    sum = "h1:FzA3bu/nt/vDvmnkg+R8Xl46gmzEDam6mZ1hzmwXFng=",
    version = "v1.24.2",
)
go_deps.module(
    path = "github.com/aws/aws-sdk-go-v2/aws/protocol/eventstream",
    sum = "h1:eBMB84YGghSocM7PsjmmPffTa+1FBUeNvGvFou6V/4o=",
    version = "v1.7.8",
)
go_deps.module(
    path = "github.com/aws/aws-sdk-go-v2/internal/configsources",
    sum = "h1:Rgg6wvjjtX8bNHcvi9OnXWwcE0a2vGpbwmtICOsvcf4=",
    version = "v1.4.21",
)
go_deps.module(
    path = "github.com/aws/aws-sdk-go-v2/internal/endpoints/v2",
    sum = "h1:PEgGVtPoB6NTpPrBgqSE5hE/o47Ij9qk/SEZFbUOe9A=",
    version = "v2.7.21",
)
go_deps.module(
    path = "github.com/aws/aws-sdk-go-v2/internal/v4a",
    sum = "h1:rWyie/PxDRIdhNf4DzRk0lvjVOqFJuNnO8WwaIRVxzQ=",
    version = "v1.4.22",
)
go_deps.module(
    path = "github.com/aws/aws-sdk-go-v2/service/internal/accept-encoding",
    sum = "h1:5EniKhLZe4xzL7a+fU3C2tfUN4nWIqlLesfrjkuPFTY=",
    version = "v1.13.7",
)
go_deps.module(
    path = "github.com/aws/aws-sdk-go-v2/service/internal/checksum",
    sum = "h1:JRaIgADQS/U6uXDqlPiefP32yXTda7Kqfx+LgspooZM=",
    version = "v1.9.13",
)
go_deps.module(
    path = "github.com/aws/aws-sdk-go-v2/service/internal/presigned-url",
    sum = "h1:c31//R3xgIJMSC8S6hEVq+38DcvUlgFY0FM6mSI5oto=",
    version = "v1.13.21",
)
go_deps.module(
    path = "github.com/aws/aws-sdk-go-v2/service/internal/s3shared",
    sum = "h1:ZlvrNcHSFFWURB8avufQq9gFsheUgjVD9536obIknfM=",
    version = "v1.19.21",
)
go_deps.module(
    path = "github.com/beorn7/perks",
    sum = "h1:VlbKKnNfV8bJzeqoa4cOKqO6bYr3WgKZxO8Z16+hsOM=",
    version = "v1.0.1",
)
go_deps.module(
    path = "github.com/json-iterator/go",
    sum = "h1:PV8peI4a0ysnczrg+LtxykD8LfKY9ML6u2jnxaEnrnM=",
    version = "v1.1.12",
)
go_deps.module(
    path = "github.com/modern-go/concurrent",
    sum = "h1:TRLaZ9cD/w8PVh93nsPXa1VrQ6jlwL5oN8l14QlcNfg=",
    version = "v0.0.0-20180306012644-bacd9c7ef1dd",
)
go_deps.module(
    path = "github.com/modern-go/reflect2",
    sum = "h1:xBagoLtFs94CBntxluKeaWgTMpvLxC4ur3nMaC9Gz0M=",
    version = "v1.0.2",
)
go_deps.module(
    path = "github.com/olekukonko/tablewriter",
    sum = "h1:P2Ga83D34wi1o9J6Wh1mRuqd4mF/x/lgBS7N7AbDhec=",
    version = "v0.0.5",
)
go_deps.module(
    path = "github.com/munnerz/goautoneg",
    sum = "h1:C3w9PqII01/Oq1c1nUAm88MOHcQC9l5mIlSMApZMrHA=",
    version = "v0.0.0-20191010083416-a7dc8b61c822",
)
go_deps.module(
    path = "github.com/PuerkitoBio/goquery",
    sum = "h1:PJTF7AmFCFKk1N6V6jmKfrNH9tV5pNE6lZMkG0gta/U=",
    version = "v1.8.0",
)
go_deps.module(
    path = "github.com/andybalholm/cascadia",
    sum = "h1:nhxRkql1kdYCc8Snf7D5/D3spOX+dBgjA6u8x004T2c=",
    version = "v1.3.1",
)
go_deps.module(
    path = "github.com/andybalholm/brotli",
    sum = "h1:eLKJA0d02Lf0mVpIDgYnqXcUn0GqVmEFny3VuID1U3M=",
    version = "v1.1.0",
)
go_deps.module(
    path = "github.com/klauspost/compress",
    sum = "h1:RPhnKRAQ4Fh8zU2FY/6ZFDwTVTxgJ/EMydqSTzE9a2c=",
    version = "v1.18.4",
)
go_deps.module(
    path = "github.com/pierrec/lz4/v4",
    sum = "h1:kocOqRffaIbU5djlIBr7Wh+cx82C0vtFb0fOurZHqD0=",
    version = "v4.1.25",
)
go_deps.module(
    path = "github.com/mattn/go-runewidth",
    sum = "h1:UNAjwbU9l54TA3KzvqLGxwWjHmMgBUVhBiTjelZgg3U=",
    version = "v0.0.15",
)
go_deps.module(
    path = "github.com/rivo/uniseg",
    sum = "h1:WUdvkW8uEhrYfLC4ZzdpI2ztxP1I582+49Oc5Mq64VQ=",
    version = "v0.4.7",
)
go_deps.module(
    path = "github.com/hexops/gotextdiff",
    sum = "h1:gitA9+qJrrTCsiCl7+kh75nPqQt1cx4ZkudSTLoUqJM=",
    version = "v1.0.3",
)
go_deps.module(
    path = "go.yaml.in/yaml/v2",
    sum = "h1:DzmwEr2rDGHl7lsFgAHxmNz/1NlQ7xLIrlN2h5d1eGI=",
    version = "v2.4.2",
)
use_repo(
    go_deps,
    "com_github_andybalholm_brotli",
    "com_github_andybalholm_cascadia",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_aws_protocol_eventstream",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_internal_configsources",
    "com_github_aws_aws_sdk_go_v2_internal_endpoints_v2",
    "com_github_aws_aws_sdk_go_v2_internal_v4a",
    "com_github_aws_aws_sdk_go_v2_service_internal_accept_encoding",
    "com_github_aws_aws_sdk_go_v2_service_internal_checksum",
    "com_github_aws_aws_sdk_go_v2_service_internal_presigned_url",
    "com_github_aws_aws_sdk_go_v2_service_internal_s3shared",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_aws_smithy_go",
    "com_github_beorn7_perks",
    "com_github_cespare_xxhash_v2",
    "com_github_dgryski_go_rendezvous",
    "com_github_go_chi_chi_v5",
    "com_github_google_uuid",
    "com_github_hexops_gotextdiff",
    "com_github_jackc_pgpassfile",
    "com_github_jackc_pgservicefile",
    "com_github_jackc_pgx_v5",
    "com_github_jackc_puddle_v2",
    "com_github_jonas_p_go_shp",
    "com_github_json_iterator_go",
    "com_github_klauspost_compress",
    "com_github_mattn_go_runewidth",
    "com_github_mfridman_interpolate",
    "com_github_mmcdole_gofeed",
    "com_github_mmcdole_goxpp",
    "com_github_modern_go_concurrent",
    "com_github_modern_go_reflect2",
    "com_github_munnerz_goautoneg",
    "com_github_olekukonko_tablewriter",
    "com_github_openprinting_goipp",
    "com_github_parquet_go_bitpack",
    "com_github_parquet_go_jsonlite",
    "com_github_parquet_go_parquet_go",
    "com_github_pierrec_lz4_v4",
    "com_github_pressly_goose_v3",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_client_model",
    "com_github_prometheus_common",
    "com_github_prometheus_procfs",
    "com_github_puerkitobio_goquery",
    "com_github_redis_go_redis_v9",
    "com_github_rivo_uniseg",
    "com_github_robfig_cron_v3",
    "com_github_sethvargo_go_retry",
    "com_github_twmb_franz_go",
    "com_github_twmb_franz_go_pkg_kmsg",
    "com_github_twpayne_go_geom",
    "in_yaml_go_yaml_v2",
    "org_golang_x_crypto",
    "org_golang_x_sync",
    "org_golang_x_text",
    "org_uber_go_atomic",
    "org_uber_go_multierr",
)

# python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//yield/agent:requirements_lock.txt",
)
pip.parse(
    hub_name = "lake_pypi",
    python_version = "3.12",
    requirements_lock = "//lake-mcp:requirements_lock.txt",
)
use_repo(pip, "pypi", "lake_pypi")

# js
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = True)
node.toolchain(node_version = "22.13.1")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    public_hoist_packages = {
        "astro": ["website"],
    },
)
use_repo(npm, "npm")

# containers
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_static",
    digest = "sha256:20bc6c0bc4d625a22a8fde3e55f6515709b32055ef8fb9cfbddaa06d1760f838",
    image = "gcr.io/distroless/static-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
oci.pull(
    name = "python_slim",
    digest = "sha256:739e7213785e88c0f702dcdc12c0973afcbd606dbf021a589cab77d6b00b579d",
    image = "docker.io/library/python",
    tag = "3.13-slim",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_static", "distroless_static_linux_amd64", "distroless_static_linux_arm64_v8", "python_slim", "python_slim_linux_amd64")
