load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "lib",
    srcs = glob(["*.go"]),
    importpath = "github.com/solanyn/mono/agentgateway-discovery",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "agentgateway-discovery",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "agentgateway-discovery_linux_amd64",
    embed = [":lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "agentgateway-discovery_linux_arm64",
    embed = [":lib"],
    goarch = "arm64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "layer",
    srcs = [":agentgateway-discovery_linux_amd64"],
    strip_prefix = ".",
)

oci_image(
    name = "image",
    base = "@distroless_static",
    entrypoint = ["/agentgateway-discovery_linux_amd64_/agentgateway-discovery_linux_amd64"],
    labels = {
        "org.opencontainers.image.source": "https://github.com/solanyn/mono/tree/main/agentgateway-discovery",
        "org.opencontainers.image.title": "agentgateway-discovery",
        "org.opencontainers.image.description": "On-demand /v1/models aggregator for AgentGateway. Fetches upstream LLM providers in parallel, merges responses, caches for 30s.",
        "org.opencontainers.image.licenses": "MIT",
    },
    tars = [":layer"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["agentgateway-discovery:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/solanyn/agentgateway-discovery",
)