load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@aspect_bazel_lib//lib:tar.bzl", "tar")

go_library(
    name = "lib",
    srcs = glob(["*.go"]),
    importpath = "github.com/solanyn/mono/burst",
    deps = [
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/apis/meta/v1/unstructured",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/log",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_controller_runtime//pkg/reconcile",
    ],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "burst",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "burst_linux_amd64",
    platform = "@rules_go//go/toolchain:linux_amd64",
    target = ":burst",
)

go_cross_binary(
    name = "burst_linux_arm64",
    platform = "@rules_go//go/toolchain:linux_arm64",
    target = ":burst",
)

tar(
    name = "layer",
    srcs = [":burst_linux_amd64"],
)

oci_image(
    name = "image",
    base = "@distroless_static",
    entrypoint = ["/burst_linux_amd64"],
    tars = [":layer"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["burst:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/solanyn/burst",
)
