load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_image_layer")
load("@cronprint_deps//:requirements.bzl", "requirement")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")

py_library(
    name = "lib",
    srcs = glob(["*.py"]),
    deps = [
        requirement("fastapi"),
        requirement("uvicorn"),
        requirement("pycups"),
        requirement("apscheduler"),
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "app",
    main = "app.py",
    srcs = [":lib"],
    visibility = ["//visibility:public"],
)

py_image_layer(
    name = "layers",
    binary = ":app",
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["./app"],
    tars = [":layers"],
    env = {
        "CUPS_SERVER": "localhost:631",
    },
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["cronprint:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/solanyn/cronprint",
)
