load("@rules_go//go:def.bzl", "go_binary", "go_cross_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@aspect_bazel_lib//lib:tar.bzl", "tar")

go_library(
    name = "lib",
    srcs = glob(["*.go"]),
    importpath = "github.com/solanyn/mono/cronprint",
    deps = [
        "@com_github_openprinting_goipp//:goipp",
        "@com_github_robfig_cron_v3//:cron",
    ],
    visibility = ["//visibility:public"],
)

go_binary(
    name = "cronprint",
    embed = [":lib"],
    visibility = ["//visibility:public"],
)

go_cross_binary(
    name = "cronprint_linux_amd64",
    platform = "@rules_go//go/toolchain:linux_amd64",
    target = ":cronprint",
)

go_cross_binary(
    name = "cronprint_linux_arm64",
    platform = "@rules_go//go/toolchain:linux_arm64",
    target = ":cronprint",
)

tar(
    name = "layer",
    srcs = [":cronprint_linux_amd64"],
)

oci_image(
    name = "image",
    base = "@distroless_static",
    entrypoint = ["/cronprint_linux_amd64"],
    tars = [":layer"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["cronprint:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/solanyn/cronprint",
)
