[project]
name = "cronprint"
version = "0.1.0"
description = "Print service"
dependencies = ["fastapi", "uvicorn", "apscheduler", "pycups", "requests"]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []

