[project]
name = "ears"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "flax>=0.10.2",
    "jax>=0.4.38",
    "jax-metal>=0.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "polars>=1.19.0",
]

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
]

