[package]
name = "gt7"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.4.1", features = ["serde"] }
byteorder = "1.5.0"
salsa20 = "0.10.2"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
