[package]
name = "gt7"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.4.1", features = ["serde"] }
byteorder = "1.5.0"
salsa20 = "0.10.2"
thiserror = "2.0.12"

# Serde dependencies are now non-optional
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Pulsar crate is optional, but will be a default feature
pulsar = { version = "6.3.1", optional = true }

[features]
# "pulsar-publish" is now a default feature.
default = ["pulsar-publish"]
pulsar-publish = ["dep:pulsar"]