load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@dbx_build_tools//build_tools/py:py.bzl", "dbx_py_binary", "dbx_py_library")

dbx_py_library(
    name = "lib",
    srcs = glob(["jaxes/*.py"]),
    visibility = ["//visibility:public"],
)

dbx_py_binary(
    name = "app",
    main = "jaxes/app.py",
    deps = [":lib"],
    visibility = ["//visibility:public"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["./app"],
    tars = [":app"],
    env = {
        "XLA_PYTHON_CLIENT_PREALLOCATE": "false",
        "JAX_PLATFORM_NAME": "gpu",
    },
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["jaxes:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/solanyn/jaxes",
)
