load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@aspect_bazel_lib//lib:tar.bzl", "tar")

py_library(
    name = "lake_mcp_lib",
    srcs = glob(["src/lake_mcp/**/*.py"]),
    imports = ["src"],
    visibility = ["//visibility:public"],
    deps = [
        "//libs/datalake",
        "@lake_pypi//httpx",
        "@lake_pypi//pyarrow",
        "@lake_pypi//fastmcp",
        "@lake_pypi//feedparser",
        "@lake_pypi//pydantic_ai",
        "@lake_pypi//cachetools",
        "@lake_pypi//py_key_value_aio",
    ],
)

py_binary(
    name = "mcp_server",
    srcs = ["src/lake_mcp/mcp_server.py"],
    imports = ["src"],
    main = "src/lake_mcp/mcp_server.py",
    visibility = ["//visibility:public"],
    deps = [":lake_mcp_lib"],
)

py_binary(
    name = "agent",
    srcs = ["src/lake_mcp/__main__.py"],
    imports = ["src"],
    main = "src/lake_mcp/__main__.py",
    visibility = ["//visibility:public"],
    deps = [":lake_mcp_lib"],
)

py_test(
    name = "test_ingest",
    srcs = [
        "tests/conftest.py",
        "tests/test_ingest.py",
    ],
    data = glob(["tests/fixtures/**"]),
    deps = [
        ":lake_mcp_lib",
        "@lake_pypi//pytest",
    ],
    args = ["-v"],
)

py_test(
    name = "test_promote",
    srcs = [
        "tests/conftest.py",
        "tests/test_promote.py",
    ],
    data = glob(["tests/fixtures/**"]),
    deps = [
        ":lake_mcp_lib",
        "@lake_pypi//pytest",
    ],
    args = ["-v"],
)

py_test(
    name = "test_state",
    srcs = ["tests/test_state.py"],
    deps = [
        ":lake_mcp_lib",
        "@lake_pypi//pytest",
    ],
    args = ["-v"],
)

py_test(
    name = "test_domain",
    srcs = [
        "tests/conftest.py",
        "tests/test_domain.py",
    ],
    data = glob(["tests/fixtures/**"]),
    deps = [
        ":lake_mcp_lib",
        "@lake_pypi//pytest",
    ],
    args = ["-v"],
)

tar(
    name = "mcp_server_layer",
    srcs = [":mcp_server"],
)

oci_image(
    name = "image",
    base = "@python_slim_linux_amd64",
    entrypoint = ["/lake-mcp/mcp_server"],
    tars = [":mcp_server_layer"],
)

oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["lake-mcp:latest"],
)

oci_push(
    name = "push",
    image = ":image",
    repository = "ghcr.io/solanyn/lake-mcp",
)
